--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.poker</groupId>
-    <artifactId>platform.core</artifactId>
+    <artifactId>platform</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>bot-client</module>
         <module>channel</module>
         <module>protocol</module>
         <module>core</module>
+        <module>data-source</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -61,6 +62,28 @@
             <artifactId>gson</artifactId>
             <version>2.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.2.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>4.2.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.2.4.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.1.0.Final</version>
+        </dependency>
+
     </dependencies>
 
     <build>
