--- a/web-client/pom.xml
+++ b/web-client/pom.xml
@@ -22,5 +22,14 @@
 
     <build>
         <finalName>web-client</finalName>
+
+        <plugins>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
