--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>data-source</module>
         <module>accounting</module>
         <module>web-client</module>
+        <module>web-socket-client</module>
     </modules>
     <packaging>pom</packaging>
 
