--- a/data-source/src/main/resources/jdbc.properties
+++ b/data-source/src/main/resources/jdbc.properties
@@ -1,8 +1,8 @@
 # database properties
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost/poker
+jdbc.url=jdbc:mysql://localhost:3306/poker
 jdbc.username=root
-jdbc.password=
+jdbc.password=110782
 
 #hibernate properties
 hibernate.pool_size=10
