--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>accounting</module>
         <module>web-client</module>
         <module>web-socket-client</module>
+        <module>model</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -93,7 +94,14 @@
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.0.1.Final</version>
+        </dependency>
+
+        <!--Hibernate validator (contains @NotEmpty)-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
             <version>5.1.0.Final</version>
         </dependency>
 
