--- a/web-client/pom.xml
+++ b/web-client/pom.xml
@@ -13,6 +13,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.poker</groupId>
+            <artifactId>data-source</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.poker</groupId>
+            <artifactId>model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
