--- a/data-source/src/main/resources/jdbc.properties
+++ b/data-source/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 # database properties
-jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.dataSource=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 jdbc.url=jdbc:mysql://localhost:3306/poker
 jdbc.username=root
 jdbc.password=110782
