--- a/web-client/src/main/webapp/WEB-INF/web.xml
+++ b/web-client/src/main/webapp/WEB-INF/web.xml
@@ -46,6 +46,15 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <filter>
+        <filter-name>auth</filter-name>
+        <filter-class>com.poker.platform.filter.AuthFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>auth</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <servlet>
         <servlet-name>dispatcherServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
