--- a/web-socket-client/pom.xml
+++ b/web-socket-client/pom.xml
@@ -17,6 +17,16 @@
             <artifactId>netty</artifactId>
             <version>3.10.3.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.poker</groupId>
+            <artifactId>channel</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.poker</groupId>
+            <artifactId>internal-message</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
