--- a/channel/pom.xml
+++ b/channel/pom.xml
@@ -22,5 +22,10 @@
             <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.poker</groupId>
+            <artifactId>internal-message</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
